Add a clause making clear that Samba shares need to be natively mounted, smb:// ioslave does not work. This is not valid for Windows, the implementation situation for Solid is unclear there as well, so don't show the whole note on Windows.

BUG: 173412

svn path=/trunk/extragear/graphics/digikam/; revision=915727